Update and rename otg.html to oscar.html

--- a/oscar.html
+++ b/oscar.html
@@ -53,11 +53,18 @@
 								</li>
 								<li><a href="champions.html">Champions</a></li>
 								<li><a href="history.html">League History</a></li>
-								<li><a href="stats.html">Historical Statistics</a></li>
+								<li><a href="#">Teams</a>
+									<ul>
+										<li><a href="oscar.html">Oscar the Grouch</a></li>
+										<li><a href="smilingbob.html">Smiling Bob</a></li>
+										<li><a href="tpain.html">T PAIN</a></li>
+							</ul>
 							</ul>
 						</nav>
 
 				</div>
+		</div>
+
 
 			<!-- Main -->
 			<!-- Regular Season Banner -->
